<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="414dp"
        android:id="@+id/table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:layout_height="wrap_content">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#CBD8E7"
            app:title="@string/name_IT" app:titleMargin="5dp" app:titleTextColor="#FCFDFD"
            tools:layout_editor_absoluteX="-16dp" tools:layout_editor_absoluteY="-11dp"/>

        <!--image-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/imgscan"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/scan" />

            <ImageView
                android:id="@+id/imgfind"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/search" />
        </LinearLayout>

        <!--Bottom-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <Button
                android:text="@string/scan"
                android:layout_width="150dp"
                android:layout_height="wrap_content" android:id="@+id/buttscan"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="40dp" android:layout_marginStart="40dp"
                android:layout_marginBottom="8dp" android:textSize="18sp"/>

            <Button
                android:text="@string/find"
                android:layout_width="150dp"
                android:layout_height="wrap_content" android:id="@+id/buttcan"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.568" android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp" android:textSize="18sp"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>
