<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="414dp"
        android:id="@+id/table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:layout_height="wrap_content">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#2196F3"
            app:title="@string/name_IT" app:titleMargin="5dp" app:titleTextColor="#FCFDFD"
            tools:layout_editor_absoluteX="-16dp" tools:layout_editor_absoluteY="-11dp"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/logoit"
            android:id="@+id/imglogoit"
            android:paddingTop="50dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="TODO" />
        <EditText
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/box_user"
            android:hint="@string/user"
            android:textColorHint="#92A2B6"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:autofillHints="" />
        <EditText
            android:hint="@string/password"
            android:textColorHint="#92A2B6"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:id="@+id/box_pass"
            android:typeface="normal"
            style="@android:style/Widget.TextView.SpinnerItem"
            app:autoSizeTextType="none"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_gravity="center"
            android:paddingTop="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <Button
                android:text="@string/login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttlogin"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="8dp"/>

            <Button
                android:text="ยกเลิก"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttcan"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.568"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"/>

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>